--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/mystyle.css">
     </head>
     <body id="page-top">
         <!-- Navigation-->
